feat(di): introduce AnnotationBeanDefinition and MethodBeanDefinition, refactor DependencyGraphBuilder for improved bean resolution